--- a/src/pages/pedidos/pedidos.scss
+++ b/src/pages/pedidos/pedidos.scss
@@ -1,7 +1,21 @@
 page-pedidos {
 
 .botoes {
-    margin: 60%;
+    margin-top: 40px;
+}
+.tabela {
+    width: 500px;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
+
+.tabela th {
+    text-align: left;
+}
+
+.enderecoEntrega {
+    margin-left: 30%;
+    margin-top: -130px;
 }
 
 }
