--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -37,5 +37,14 @@ page-login {
     font-size: 40px;
   }
 
+  .card {
+    height: 650px;
+    width: 750px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+  }
+
 
 }
