--- a/src/pages/pedidos/pedidos.scss
+++ b/src/pages/pedidos/pedidos.scss
@@ -3,6 +3,22 @@ page-pedidos {
 .botoes {
     margin-top: 40px;
 }
+.botoesHeader1 {
+    // width: 20%;
+    margin-left: 90%;
+    margin-top: 0px;
+    margin-bottom: -12px;
+}
+
+.botoesHeader2 {
+    margin-left: 80%;
+    margin-top: -35px;
+}
+
+.botoesHeader {
+    margin-top: -40px;
+}
+
 .tabela {
     width: 500px;
     margin-top: 1rem;
