--- a/src/pages/pedidos/pedidos.scss
+++ b/src/pages/pedidos/pedidos.scss
@@ -27,6 +27,13 @@ page-pedidos {
 
 .tabela th {
     text-align: left;
+
+}
+.tabela td {
+        // border:solid 1px;
+        // border-left: solid 1px;
+        // border-color: gray;
+        height: 30px;
 }
 
 .enderecoEntrega {
